# backend_chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LANGCHAIN_USAGE.md  README.md  README_EVALUACION.md  analisis_resultados.py  docker-compose.yml  evaluate_rag.py  evaluate_rag.sh  filter_results.sh  main.py  pyproject.toml  requirements.txt  resultados_evaluacion_clean_gemini-2.5.json  resultados_evaluacion_clean_gemini.json  resultados_evaluacion_gemini.json  resultados_evaluacion_gemini_filtered.json  resultados_evaluacion_llamaindex_gemini.json  resultados_evaluacion_llamaindex_gemini_gemini-2.5.json  resultados_evaluacion_llamaindex_llama_gemini-2.5.json  resultados_evaluacion_normal_gemini_gemini-2.5.json
app/api/: chat_route.py  documents_route.py
app/assets/: preguntas_respuestas.json
app/core/: config.py
app/schemas/: chat.py  document.py
app/services/: chat_service.py  chroma_service.py  embedding_service.py  langchain_service.py  llamaIndex.py  llm_service.py  pdf_service.py  rerank_service.py
app/telegram/: bot.py  session.py
