[project]
name = "backend-chatbot"
version = "0.1.0"
description = "Backend chatbot con FastAPI, RAG y LlamaIndex"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.5.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "google-generativeai>=0.8.0",
    "ollama>=0.3.0",
    "python-telegram-bot>=21.0",
    "llama-index-core>=0.13.0",
    "llama-index-embeddings-gemini>=0.4.0",
    "llama-index-embeddings-ollama>=0.3.0",
    "llama-index-vector-stores-chroma>=0.5.0",
    "llama-index-readers-file>=0.2.0",
    "llama-index-llms-gemini>=0.6.0",
    "llama-index-llms-ollama>=0.9.0",
    "pypdf>=5.0.0",
    "pdfminer.six>=20231228",
    "pdf2image>=1.17.0",
    "pillow>=10.2.0,<11.0.0",
    "unstructured[pdf]>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
